// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-aigateway - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Configure Azure API Management (APIM) as AI Gateway to secure, observe, control AI models, MCP servers, agents. Helps with rate limiting, semantic caching, content safety, load balancing. USE FOR: AI Gateway, APIM, setup gateway, configure gateway, add gateway, model gateway, MCP server, rate limit, token limit, semantic cache, content safety, load balance, OpenAPI import, convert API to MCP. DO NOT USE FOR: deploy models (use microsoft-foundry), Azure Functions (use azure-functions), databases (use azure-postgres).",
  "extractedKeywords": [
    "agents",
    "aigateway",
    "aks",
    "apim",
    "authentication",
    "azure",
    "azure-functions",
    "azure-postgres",
    "balance",
    "balancing",
    "bicep",
    "cache",
    "caching",
    "cli",
    "configure",
    "content",
    "control",
    "convert",
    "databases",
    "deploy",
    "functions",
    "gateway",
    "helps",
    "identity",
    "import",
    "limit",
    "limiting",
    "load",
    "management",
    "mcp",
    "microsoft-foundry",
    "model",
    "models",
    "monitor",
    "observability",
    "observe",
    "openapi",
    "rate",
    "safety",
    "secure",
    "security",
    "semantic",
    "server",
    "servers",
    "setup",
    "token",
    "with",
  ],
  "name": "azure-aigateway",
}
`;

exports[`azure-aigateway - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agents",
  "aigateway",
  "aks",
  "apim",
  "authentication",
  "azure",
  "azure-functions",
  "azure-postgres",
  "balance",
  "balancing",
  "bicep",
  "cache",
  "caching",
  "cli",
  "configure",
  "content",
  "control",
  "convert",
  "databases",
  "deploy",
  "functions",
  "gateway",
  "helps",
  "identity",
  "import",
  "limit",
  "limiting",
  "load",
  "management",
  "mcp",
  "microsoft-foundry",
  "model",
  "models",
  "monitor",
  "observability",
  "observe",
  "openapi",
  "rate",
  "safety",
  "secure",
  "security",
  "semantic",
  "server",
  "servers",
  "setup",
  "token",
  "with",
]
`;
